# automaton_auditor

./: .env.example  .gitignore  README.md  TRP1 Challenge Week 2_ The Automaton Auditor.md  pyproject.toml  requirements.txt
reports/: interim_findings.json
scripts/: append_verification.py  run_interim.py
src/: graph.py  graph_langgraph.py  state.py
src/nodes/: detectives.py
src/tools/: doc_tools.py  repo_tools.py
